<resources>
    <string name="app_name">包格格</string>
    <string name="search">搜索</string>
    <string name="search_shop">%s的店铺</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_cate">分类</string>
    <string name="main_tab_cart">购物车</string>
    <string name="main_tab_personal">个人中心</string>
    <string name="main_tab_found">发现</string>
    <string name="format_price">¥ %1$s</string>
    <string name="format_price_plus">+¥ %1$s</string>
    <string name="format_price_minus">-¥ %1$s</string>
    <string name="format_price_cn">%1$s元</string>
    <string name="seckill_title_ing">正在进行</string>
    <string name="seckill_title_wait">即将开始</string>
    <string name="seckill_title">秒杀专区</string>
    <string name="brand_title_museum">品牌馆</string>
    <string name="guide_txt_go">点 击 开 启 新 版</string>
    <string name="personal_setting">个人设置</string>
    <string name="personal_order_manager">订单管理</string>
    <string name="personal_address_manager">地址管理</string>
    <string name="personal_integral">积分管理</string>
    <string name="personal_contact_us">联系我们</string>
    <string name="personal_buy_notes">购买须知</string>
    <string name="personal_default_name">奢侈是你的权力</string>
    <string name="personal_exit_login">退出登录</string>
    <string name="personal_login_or_register">登&#x0020;&#x0020;&#x0020;录&#x0020;&#x0020;/&#x0020;&#x0020;注&#x0020;&#x0020;&#x0020;册</string>
    <string name="personal_exit">退&#x0020;&#x0020;&#x0020;出&#x0020;&#x0020;&#x0020;登&#x0020;&#x0020;&#x0020;录</string>
    <string name="personal_contact_phone_uri">"tel:400-854-8854"</string>
    <string name="personal_contact_buy_notice_url">"https://mmdev.1magway.com/pictures/platform/commodity/picture/html/buyNotice.html"</string>
    <string name="login_title">账号登录</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_btn">确&#x0020;&#x0020;&#x0020;认&#x0020;&#x0020;&#x0020;登&#x0020;&#x0020;&#x0020;录</string>
    <string name="login_quick_register"><u>手机快速注册</u></string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="common_pwd_tip">请输入6-20位数字、英文字母</string>
    <string name="common_pwd_filter">0123456789abcdefghigklmnopqrstuvwxyz</string>
    <string name="login_weixin_hint1">登录后包格格将获得以下权限</string>
    <string name="login_weixin_hint2">获取你的公开信息(昵称、头像等)</string>
    <string name="common_title_forget">忘记密码</string>
    <string name="common_title_register">手机快速注册</string>
    <string name="send_verification_send">获取验证码</string>
    <string name="send_verification_registration_agreement"><Data><![CDATA[<font color="#b5b5b5">同意</font><font color="#000000"><u>注册协议</u></font>]]></Data></string>
    <string name="set_pwd_tip">请重新设置新密码</string>
    <string name="set_pwd_hint">请输入密码</string>
    <string name="set_pwd_hint_again">再次输入密码</string>
    <string name="set_pwd_register_give_up">点击"返回"将放弃注册，确定需要放弃注册吗？</string>
    <string name="set_pwd_forget_give_up">点击"返回"将放弃忘记密码的修改操作，确定需要放弃吗？</string>
    <string name="set_pwd_auto_login_tip">注册成功，是否立即登录？</string>
    <string name="set_pwd_auto_login_msg">正在登录。。。</string>
    <string name="change_pwd_title">修改密码</string>
    <string name="change_pwd_old_pwd">输入旧密码</string>
    <string name="change_pwd_new_pwd">输入新密码</string>
    <string name="change_pwd_new_pwd_repeat">再次输入新密码</string>
    <string name="change_pwd_differ">两次输入的密码不相同</string>
    <string name="personal_setting_title">个人设置</string>
    <string name="personal_setting_nickname">昵称</string>
    <string name="personal_setting_phone">手机号</string>
    <string name="personal_setting_sex">性别</string>
    <string name="personal_setting_pwd">修改密码</string>
    <string name="personal_setting_birthday">出生日期</string>
    <string name="search_filter_confirm">确定</string>
    <string name="search_filter_pick_brand">请选择品牌</string>
    <string name="search_filter_man">男士</string>
    <string name="search_filter_woman">女士</string>
    <string name="search_filter_boy">男童</string>
    <string name="search_filter_girl">女童</string>
    <string name="search_filter_child">童装</string>
    <string name="search_filter_min_price">最低价</string>
    <string name="search_filter_max_price">最高价</string>
    <string name="product_detail_format_stock">当前库存：%1$d</string>
    <string name="product_detail_foreign_store">海外仓发货</string>
    <string name="product_detail_inland_store">国内仓发货</string>
    <string name="product_detail_txt_price_intro">价格已包含关税</string>
    <string name="product_detail_txt_size_intro">尺码信息</string>
    <string name="toast_not_whole_sku">请选择完整的商品信息</string>
    <string name="product_details_txt_buy">立即购买</string>
    <string name="product_details_pingtuan_buy">发起拼团</string>
    <string name="product_details_txt_cart">购物车</string>
    <string name="product_details_txt_2_cart">加入购物车</string>
    <string name="product_details_format_count_down">剩余时间：%1$s</string>
    <string name="product_details_format_count_down_wait">距离开始还有：%1$s</string>
    <string name="cart_title">购物车</string>
    <string name="cate_title">分类</string>
    <string name="cart_format_color">颜色：%1$s</string>
    <string name="cart_format_size">尺码：%1$s</string>
    <string name="cart_format_stock">最大库存：%1$d</string>
    <string name="cart_txt_invalid">商品下架</string>
    <string name="cart_txt_null_stock">商品暂缺</string>
    <string name="cart_txt_insufficient">商品不足</string>
    <string name="cart_txt_order">结 算</string>
    <string name="cart_format_total_count">%1$d件商品</string>
    <string name="cart_txt_total_price_tag">合计：</string>
    <string name="cart_txt_intro">该价格不包含可能产生的税费及运费</string>
    <string name="cart_no_select">请至少选择一件商品</string>
    <string name="order_list_title">订单管理</string>
    <string name="order_list_cancel">取消订单</string>
    <string name="order_list_txt_invalid">订单失效</string>
    <string name="order_list_txt_pay">前往结算</string>
    <string name="order_list_format_time">下单时间：%1$s</string>
    <string name="order_list_format_price">实付款：%1$s</string>
    <string name="order_list_format_count">数量：%1$d</string>
    <string name="order_list_format_count_down">剩余付款时间：%1$s</string>
    <string name="order_list_format_code">货号 %1$s</string>
    <string name="order_outtradeno_format_code">物流单号 %1$s</string>
    <string name="order_list_title_all">全部</string>
    <string name="order_list_title_wait_pay">待付款</string>
    <string name="order_list_title_payed">待发货</string>
    <string name="order_list_title_delivered">待收货</string>
    <string name="order_list_title_finish">已完成</string>
    <string name="order_detail_title">订单详情</string>
    <string name="order_details_txt_remark_tag">备注：</string>
    <string name="order_details_format_pro_num">商品编号：%1$s</string>
    <string name="order_details_default_pro_num">商品编号：未填写货号</string>
    <string name="order_details_format_pro_count">x%1$d</string>
    <string name="order_details_format_code">订单编号：%1$s</string>
    <string name="order_details_format_time">下单时间：%1$s</string>
    <string name="order_details_format_pay_way">支付方式：%1$s</string>
    <string name="order_details_format_deliver_way">物流信息：%1$s</string>
    <string name="order_details_format_deliver_num">单号：%1$s</string>
    <string name="order_details_format_remark">备注：%1$s</string>
    <string name="order_details_format_pro_price">商品金额：%1$s</string>
    <string name="order_details_format_tax">税费：%1$s</string>
    <string name="order_details_format_freight">运费：%1$s</string>
    <string name="order_details_format_total_price">合计：%1$s</string>
    <string name="order_details_format_pay_price">实际付款：%1$s</string>
    <string name="order_details_format_pay_count_down">剩余付款时间：%1$s</string>
    <string name="order_details_pay_type_alipay">支付宝</string>
    <string name="order_details_pay_type_wechat">微信</string>
    <string name="order_details_pay_type_bank">银联</string>
    <string name="order_details_txt_pay">立即付款</string>
    <string name="order_commit_txt_remark_tag">备注</string>
    <string name="order_commit_hint_remark">由此输入</string>
    <string name="order_commit_txt_commit">提交订单</string>
    <string name="order_commit_title">填写订单</string>
    <string name="order_pay_title">订单支付</string>
    <string name="order_commit_toast_null_address">请填写收货信息</string>
    <string name="found_list_tab_hot">热区</string>
    <string name="found_list_tab_announcement">公告</string>
    <string name="found_list_tab_training">培训</string>
    <string name="found_list_tab_qaa">问答</string>
    <string name="found_list_tab_show_time">秀场</string>
    <string name="address_default_address">默认地址</string>
    <string name="address_edit">编辑</string>
    <string name="address_title">地址管理</string>
    <string name="address_new">添加新地址</string>
    <string name="address_delete">删除</string>
    <string name="address_name">%1$s&#x0020;&#x0020;%2$s</string>
    <string name="address_edit_new_title">新建收货地址</string>
    <string name="address_edit_title">编辑收货地址</string>
    <string name="address_edit_name">收货人</string>
    <string name="address_edit_contact">联系方式</string>
    <string name="address_edit_address">所在地区</string>
    <string name="address_edit_address_detail">详细地址</string>
    <string name="address_edit_post_code">邮政编码</string>
    <string name="address_delete_tip">确定要删除地址吗？</string>
    <string name="address_edit_save">保&#x0020;&#x0020;&#x0020;&#x0020;存</string>
    <string name="sale_order_list_title">销售订单</string>
    <string name="order_apply_after_sale">申请售后</string>
    <string name="order_detail"><u>查看详情</u></string>
    <string name="order_delivered_confirm">确认收货</string>
    <string name="after_sale"><u>申请退货</u></string>
    <string name="delete">删除</string>
    <string name="common_phone_number">手机号</string>
    <string name="common_verification_code">验证码</string>
    <string name="common_password">密码</string>
    <string name="common_next_step">下一步</string>
    <string name="common_ensure">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_save">保存</string>
    <string name="null_data">这里还是空的哦</string>
    <string name="error_data">加载失败，请稍后重试&#8230;</string>
    <string name="full_loading">正在全力加载..</string>
    <string name="main_toast_back">再按一次退出程序</string>
    <string name="str_aes_password">ajNGbzgjOHZTVEgjKjU3ZyRjRyp1IWR1KWZ1I2hlKEg=</string>
    <string name="search_records">历史记录</string>
    <string name="search_clear">清空</string>
    <string name="search_filter_title_cate">商品分类</string>
    <string name="search_filter_title_price">价格区间</string>
    <string name="search_filter_title_brand">品 牌</string>
    <string name="reset">重置</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_loading">正在加载..</string>
    <string name="dialog_wait_loading">请稍后..</string>
    <string name="after_sale_doing">处理中</string>
    <string name="after_sale_record">申请记录</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_hint_select">请选择支付方式</string>
    <string name="pay_txt_confirm">确 认</string>
    <string name="pay_toast_failed">取消付款！</string>
    <string name="pay_toast_success">支付成功</string>
    <string name="pay_unionpay_web_url">/unionPayController/unionPayMini?orderid=%1$s</string>
    <string name="pay_toast_no_wechat">未安装微信</string>
    <string name="pay_toast_cancel">取消付款！</string>
    <string name="personal_name_default"> 越享越赚！</string>
    <string name="members_only_goods">会员专区</string>
    <string name="member_upgrade_info_title">尊享会员</string>
    <string name="upgrade_immediately">立即升级</string>
    <string name="limited_edition">限量特惠</string>
    <string name="member_register">会员注册</string>
    <string name="gift">礼品</string>
    <string name="select_please">请选择</string>
    <string name="member_price">会员价</string>
    <string name="seckill_countdown_title">距本场秒杀结束还有</string>
    <string name="seckill_enter">立刻入场</string>
    <string name="time_zero">00:00:00</string>
    <string name="received">已领取</string>
</resources>