<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.a1magway.bgg.v.personal.ModifyPwdActivity">
<com.a1magway.bgg.widget.TitleBar
    android:id="@+id/modify_title_bar"
    android:layout_width="match_parent"
    app:titleText="@string/change_pwd_title"
    android:layout_height="wrap_content">
</com.a1magway.bgg.widget.TitleBar>

    <com.a1magway.bgg.widget.ClearEditText
        android:layout_marginTop="18dp"
        android:layout_marginLeft="@dimen/login_edt_margin"
        android:layout_marginBottom="@dimen/login_edt_margin_bottom"
        android:layout_marginRight="@dimen/login_edt_margin"
        android:id="@+id/modify_pwd_old_edt"
        android:layout_width="match_parent"
        app:maxLength="@integer/pwd_max_length"
        app:hint="@string/change_pwd_old_pwd"
        app:inputType="password"
        app:digits="@string/common_pwd_filter"
        android:layout_height="wrap_content">

    </com.a1magway.bgg.widget.ClearEditText>
    <com.a1magway.bgg.widget.ClearEditText
        android:layout_marginBottom="@dimen/login_edt_margin_bottom"
        android:layout_marginLeft="@dimen/login_edt_margin"
        android:layout_marginRight="@dimen/login_edt_margin"
        android:id="@+id/modify_pwd_new_edt"
        android:layout_width="match_parent"
        app:maxLength="@integer/pwd_max_length"
        app:hint="@string/change_pwd_new_pwd"
        app:inputType="password"
        app:digits="@string/common_pwd_filter"
        android:layout_height="wrap_content">

    </com.a1magway.bgg.widget.ClearEditText>
    <com.a1magway.bgg.widget.ClearEditText
        android:layout_marginLeft="@dimen/login_edt_margin"
        android:layout_marginRight="@dimen/login_edt_margin"
        android:id="@+id/modify_pwd_new_repeat_edt"
        android:layout_width="match_parent"
        app:maxLength="@integer/pwd_max_length"
        app:hint="@string/change_pwd_new_pwd_repeat"
        app:inputType="password"
        app:digits="@string/common_pwd_filter"
        android:layout_height="wrap_content">

    </com.a1magway.bgg.widget.ClearEditText>

    <CheckBox
        android:id="@+id/modify_pwd_checkBox"
        style="@style/PwdTipCheckBox"/>

    <Button
        android:id="@+id/modify_pwd_btn"
        style="@style/Common_Btn_Style"
        android:enabled="false"
        android:layout_marginLeft="@dimen/common_btn_margin"
        android:layout_marginRight="@dimen/common_btn_margin"
        android:text="@string/common_next_step"/>
</LinearLayout>
