<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.a1magway.bgg.v.login.UserVerificationActivity">

    <com.a1magway.bgg.widget.ClearEditText
        android:id="@+id/send_code_phone_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_edt_margin_bottom"
        android:layout_marginLeft="@dimen/login_edt_margin"
        android:layout_marginRight="@dimen/login_edt_margin"
        android:layout_marginTop="@dimen/common_margin_top_big"
        app:hint="@string/common_phone_number"
        app:inputType="number"
        app:maxLength="@integer/phoneLength" />


    <LinearLayout
        android:id="@+id/send_code_code_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_item_height"
        android:layout_marginBottom="@dimen/login_edt_padding_left"
        android:layout_marginLeft="@dimen/login_edt_margin"
        android:layout_marginRight="@dimen/login_edt_margin"
        android:orientation="horizontal">

        <com.a1magway.bgg.widget.ClearEditText
            android:id="@+id/send_code_code_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            app:hint="@string/common_verification_code"
            app:inputType="number"
            app:maxLength="@integer/verification_code_length" />

        <TextView
            android:id="@+id/send_code_send_tv"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/login_edt_padding_left"
            android:layout_marginRight="@dimen/login_edt_padding_left"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/send_verification_send"
            android:textColor="@drawable/text_color_selector"
            android:textSize="@dimen/text_size_s" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/registration_agreement_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="@dimen/login_edt_margin"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/registration_agreement_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:button="@drawable/radio_button_selector"
            android:checked="true"
            android:gravity="center"
            android:padding="@dimen/login_edt_padding_left" />

        <TextView
            android:id="@+id/registration_agreement_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/login_edt_padding_left" />
    </LinearLayout>

    <Button
        android:id="@+id/send_code_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/common_btn_margin"
        android:layout_marginRight="@dimen/common_btn_margin"
        android:background="@drawable/enable_dark_corners_fourteen"
        android:enabled="false"
        android:text="@string/common_ensure"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
